--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -1,6 +1,6 @@
 sonar.projectKey=mquan19022k3_Project-Test-
 sonar.organization=mquan19022k3
-
+sonar.java.binaries=build 
 # This is the name and version displayed in the SonarCloud UI.
 #sonar.projectName=Project-Test-
 #sonar.projectVersion=1.0
